--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 </style>
 </head>
 <body>
-
+  <a href="edugames.html"><center><img src="Untitled (1).jpg" width="500" height="100"></center></a>
   <span class="sidebar-toggle" onclick="openNav()">&#9776;</span>
 
   <div id="mySidebar" class="sidebar">
@@ -355,7 +355,7 @@
   </div>
 </section>
 
-
+<a href="https://mgthekiller.github.io/Neutron/"><center><img src="Untitled (2).jpg" width="500" height="100"></center></a>
   <div id="gradesOverlay" class="overlay">
     <div class="modal">
       <span class="close-btn" onclick="closeModal('gradesOverlay')">&times;</span>
